<resources>
    <string name="app_name">COMP2000-CW1-NicaRazvan</string>
    <string name="logo">Logo</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="button">Button</string>
    <string name="game_1">Game 1</string>
    <string name="game_2">Game 2</string>
    <string name="game_3">Game 3</string>
    <string name="log_out">Log Out</string>
    <string name="next">Next</string>
</resources>