<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#318C5E"
    android:layout_height="match_parent"
    tools:context=".Menu1">

    <ImageView
        android:id="@+id/LogoIMG"
        android:layout_width="200dp"
        android:layout_height="110dp"
        android:layout_marginTop="60dp"
        android:background="#318C5E"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/cardview_dark_background" />

    <TextView
        android:id="@+id/LogoTxt"
        android:layout_width="98dp"
        android:layout_height="54dp"
        android:text="Logo"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/LogoIMG"
        app:layout_constraintEnd_toEndOf="@+id/LogoIMG"
        app:layout_constraintStart_toStartOf="@+id/LogoIMG"
        app:layout_constraintTop_toTopOf="@+id/LogoIMG" />

    <Button
        android:id="@+id/Game1ID"
        android:layout_width="307dp"
        android:layout_height="77dp"
        android:layout_marginTop="88dp"
        android:text="@string/game_1"
        android:backgroundTint="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogoIMG" />

    <Button
        android:id="@+id/Game2ID"
        android:layout_width="307dp"
        android:layout_height="77dp"
        android:layout_marginTop="44dp"
        android:text="@string/game_2"
        android:backgroundTint="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Game1ID" />

    <Button
        android:id="@+id/Game3ID"
        android:layout_width="307dp"
        android:layout_height="77dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/cardview_dark_background"
        android:text="@string/game_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Game2ID"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/LogOutID"
        android:layout_width="125dp"
        android:layout_height="43dp"
        android:layout_marginEnd="200dp"

        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/cardview_dark_background"
        android:text="@string/log_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Game3ID" />

    <Button
        android:id="@+id/NextID"
        android:layout_width="124dp"
        android:layout_height="43dp"
        android:layout_marginStart="200dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/cardview_dark_background"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Game3ID" />

</androidx.constraintlayout.widget.ConstraintLayout>