<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#318C5E"
    android:foregroundTint="#887373"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/LogoIMG"
        android:layout_width="200dp"
        android:layout_height="110dp"
        android:layout_marginTop="60dp"
        android:background="#318C5E"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/cardview_dark_background" />

    <TextView
        android:id="@+id/LogoTxt"
        android:layout_width="98dp"
        android:layout_height="54dp"
        android:text="Logo"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/LogoIMG"
        app:layout_constraintEnd_toEndOf="@+id/LogoIMG"
        app:layout_constraintStart_toStartOf="@+id/LogoIMG"
        app:layout_constraintTop_toTopOf="@+id/LogoIMG" />

    <EditText
        android:id="@+id/EmailID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="32dp"

        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/PasswordID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogoIMG"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/EmailTxt"
        android:layout_width="67dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="360dp"
        android:text="@string/email"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/EmailID"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/PasswordID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="272dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPassword"

        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"

        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/PasswordTxt"
        android:layout_width="86dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/PasswordID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailTxt" />

    <Button
        android:id="@+id/LogInBtn"
        android:layout_width="155dp"
        android:layout_height="98dp"
        android:layout_marginBottom="65dp"
        android:backgroundTint="@color/cardview_dark_background"
        android:text="LogIn"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

